manifests/fltc.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fltc
