manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fltc-server
  namespace: fltc
spec:
  selector:
    app: fltc-server
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
